--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^8.0",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.5",
-        "milon/barcode": "^8.0"
+        "milon/barcode": "^8.0",
+        "softon/indipay": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
