--- a/composer.json
+++ b/composer.json
@@ -40,12 +40,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+		    "Database\\Seeders\\": "database/seeders/"
         },
-        "classmap": [
-            "database/seeders",
-            "database/factories"
-        ],
+       
         "files": [
             "app/Helpers/Helper.php"
         ]
